--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 
         // 🔥 CLOUDINARY CONFIG - YOU MUST CHANGE THIS!
         // REPLACE "xxxxx" WITH YOUR ACTUAL CLOUDINARY CLOUD NAME
-        const CLOUDINARY_CLOUD_NAME = "birthday_unsigned"; 
+        const CLOUDINARY_CLOUD_NAME = "dehzhyku9"; 
         const CLOUDINARY_UPLOAD_PRESET = "birthday_unsigned";
 
         /* --- CONFIGURATION --- */
