--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                     class="w-full flex-grow bg-transparent border-none outline-none handwritten text-xl resize-none custom-scroll text-gray-700"
                     placeholder="Write your birthday wish here..."></textarea>
 
-                <div id="signature-area" class="mt-8 text-right cursor-pointer" onclick="revealSender(this)">
+                <div id="signature-area" class="mt-8 text-right cursor-pointer hidden" onclick="revealSender(this)">
                     <p class="handwritten text-lg text-gray-500">With all my heart,</p>
                     <p id="sender-reveal" class="handwritten text-2xl font-bold text-pink-600 transition-all">
                         — Someone who cares ❤️<br>
